# arkanoid.cpp

./: .clang-format  .clangd  CMakeLists.txt  README.md  configs.cppm  configs.hpp  justfile  xmake.lua
ressources/: level.txt
src/: board.cpp  board.cppm  board.hpp  bonus_manager.cpp  bonus_manager.cppm  bonus_manager.hpp  color.cpp  color.hpp  configs.hpp  controller.cpp  controller.cppm  controller.hpp  display.cpp  display.cppm  display.hpp  game.cpp  game.hpp  main.cpp  vec2.hpp
src/models/: ball.cpp  ball.cppm  ball.hpp  board.cpp  board.hpp  border.cpp  border.cppm  border.hpp  bounceable.cpp  bounceable.hpp  brick.cpp  brick.hpp  laser.cpp  laser.cppm  laser.hpp  pill.cpp  pill.cppm  pill.hpp  racket.cpp  racket.cppm  racket.hpp  rectangle.cpp  rectangle.hpp
src/models/bricks/: brick.cpp  brick.cppm  brick.hpp  gold.cpp  gold.cppm  gold.hpp  normal.cpp  normal.hpp  silver.cpp  silver.cppm  silver.hpp
src/shared/: bonus.cpp  bonus.cppm  bonus.hpp  bounceable.cpp  bounceable.cppm  bounceable.hpp  circle.cpp  circle.cppm  circle.hpp  color.cpp  color.cppm  color.hpp  moveable.cpp  moveable.cppm  moveable.hpp  rectangle.cpp  rectangle.cppm  rectangle.hpp  vec2.cpp  vec2.cppm  vec2.hpp
src/utilies/: bounceable.hpp  color.cpp  rectangle.cpp  vec2.cpp
